test: First failing unit test for timer

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,5 +15,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
+  <script src="spec/timerSpec.js"></script>
+
 
 </head>
