Failing test added for initial player position

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,5 +15,6 @@
 
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
+  <script src="spec/player_spec.js"></script>
 
 </head>
