--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,8 +12,10 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="lib/Game.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
+  <script src="spec/GameSpec.js"></script>
 
 </head>
