--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title> T A P 'N' R U N</title>
+  </head>
+  <body style="background-color:powderblue;" >
+    <center>
+    <h1> TAP 'N' RUN </h1>
+      <canvas id="canvas" width="800" height="700"></canvas>
+
+    </center>
+  </body>
+</html>
