--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
   <body style="background-color:powderblue;" >
     <center>
     <h1> TAP 'N' RUN </h1>
-      <canvas id="canvas" width="800" height="700"></canvas>
-
+      <canvas id="canvas" width="934" height="622"></canvas>
     </center>
+
+      <script>
+      var canvas = document.getElementById("canvas"),
+          ctx = canvas.getContext("2d");
+
+      var background = new Image();
+      background.src = "https://i.imgur.com/1S2954j.png";
+
+      var runner = new Image();
+      runner.src = "https://i.imgur.com/4vbg2JO.png"
+
+      background.onload = function(){
+          ctx.drawImage(background,0,0);
+      }
+      runner.onload = function(){
+          ctx.drawImage(runner,6,-5,100,180);
+      }
+      </script>
+
   </body>
 </html>
