Incorporated first circle canvas into the logic

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title> T A P 'N' R U N</title>
+      <script src="src/Player.js"></script>
+      
   </head>
   <body style="background-color:powderblue;" >
     <center>
     <h1> TAP 'N' RUN </h1>
+
+
+<canvas id="canvas" width="300" height="300" style="border: 10px solid black;"></canvas>
+
+
 
 
 
