All Linting Errors fixed or removed

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,7 +14,7 @@
   <!-- include source files here... -->
   <script src="src/timer.js"></script>
   <script src="src/Player.js"></script>
-  <script src="lib/Game.js"></script>
+  <script src="src/Game.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
