--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,11 +10,12 @@
   <script src="lib/jasmine-3.3.0/jasmine.js"></script>
   <script src="lib/jasmine-3.3.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.3.0/boot.js"></script>
+  <canvas id="canvas" width="300" height="300" style="border: 10px solid black;"></canvas>
 
   <!-- include source files here... -->
   <script src="src/Player.js"></script>
   <script src="lib/Game.js"></script>
-  
+
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
   <script src="spec/player_spec.js"></script>
