--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,13 +16,14 @@
   <script src="src/timer.js"></script>
   <script src="src/Player.js"></script>
   <script src="src/Game.js"></script>
+  <script src="src/display.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
   <script src="spec/timerSpec.js"></script>
   <script src="spec/player_spec.js"></script>
   <script src="spec/GameSpec.js"></script>
-
+  <script src="spec/displaySpec.js"></script>
 
 
 </head>
