minor: it block created for display class to load new player

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title> T A P 'N' R U N</title>
   <script src="src/Player.js"></script>
+  <script src="src/display.js"></script>
 
 </head>
 <body style="background-color:powderblue;" >
