Feature: moved player display fucntionality to display class

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
     <canvas id="canvas" width="500" height="500" tabindex="0" style="border: 10px solid black;"></canvas>
     <script type="text/javascript">
-    var canvas = document.querySelector("canvas")
-    var player = new Player
-    canvas.onkeyup = function(e) {
-      if(e.keyCode == 32) {
-        player.move()
-      }
-    }
-
-    // addEventListener("keydown", Player.move(), true)
+    // var canvas = document.querySelector("canvas")
+    // var player = new Player
+    // canvas.onkeyup = function(e) {
+    //   if(e.keyCode == 32) {
+    //     player.move()
+    //   }
+    // }
+    //
+    // // addEventListener("keydown", Player.move(), true)
 
     </script>
   </center>
