--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -24,6 +24,8 @@
   <script src="spec/player_spec.js"></script>
   <script src="spec/GameSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
+  <script src="spec/movement_spec.js"></script>
+
 
 
 </head>
