--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,7 @@
   <script src="src/Player.js"></script>
   <script src="src/Game.js"></script>
   <script src="src/display.js"></script>
+  <script src="src/movement.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/feature_spec.js"></script>
@@ -25,7 +26,5 @@
   <script src="spec/GameSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
   <script src="spec/movement_spec.js"></script>
-
-
 
 </head>
