--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title> T A P 'N' R U N</title>
   <script src="src/Player.js"></script>
   <script src="src/display.js"></script>
+  <script src="src/movement.js"></script>
+  <script src="interface.js"></script>
+
 
 </head>
 <body style="background-color:powderblue;" >
@@ -14,15 +17,6 @@
 
     <canvas id="canvas" width="500" height="500" tabindex="0" style="border: 10px solid black;"></canvas>
     <script type="text/javascript">
-    var canvas = document.querySelector("canvas")
-    var player = new Player
-    canvas.onkeyup = function(e) {
-      if(e.keyCode == 32) {
-        player.move()
-      }
-    }
-
-    addEventListener("keydown", player.move(), true)
 
     </script>
   </center>
