Timer now displayed, can almost move as expected

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title> T A P 'N' R U N</title>
   <script src="src/Player.js"></script>
   <script src="src/display.js"></script>
+  <script src="src/timer.js"></script>
   <script src="src/movement.js"></script>
   <script src="interface.js"></script>
 
