--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -26,5 +26,6 @@
   <script src="spec/GameSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
   <script src="spec/movement_spec.js"></script>
+  <script src="spec/webHelpers.js"></script>
 
 </head>
