Feature: controller class and enableControls method added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <script src="src/Player.js"></script>
   <script src="src/display.js"></script>
   <script src="src/movement.js"></script>
+  <script src="src/controller.js"></script>
   <script src="interface.js"></script>
+
 
 
 </head>
