test: fixed tests from merges of timer and controller classes

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,14 +18,15 @@
   <script src="src/Game.js"></script>
   <script src="src/display.js"></script>
   <script src="src/movement.js"></script>
+  <script src="src/controller.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/feature_spec.js"></script>
+  <script src="spec/featureSpec.js"></script>
   <script src="spec/timerSpec.js"></script>
-  <script src="spec/player_spec.js"></script>
+  <script src="spec/playerSpec.js"></script>
   <script src="spec/GameSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
-  <script src="spec/movement_spec.js"></script>
+  <script src="spec/movementSpec.js"></script>
   <script src="spec/webHelpers.js"></script>
 
 </head>
