Added start button, functionality not yet there

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="src/movement.js"></script>
   <script src="src/controller.js"></script>
   <script src="interface.js"></script>
+  <script src="src/button.js"></script>
+
 
 
 
