--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
   <script src="src/controller.js"></script>
   <script src="interface.js"></script>
   <script src="src/button.js"></script>
+  <style>
+     h1 {
+     color: #9932CC;
+     font-size: 80px;
+     }
+     #title span{
+     font-size: 128px;
+     }
 
+   </style>
 </head>
-<body style="background-color:powderblue;" >
+<body >
   <center>
-    <h1> ≋T≋A≋P≋ ≋'≋N≋'≋ ≋R≋U≋N≋ </h1>
+    <h1 id="title", style="font-family:Courier;"> . T A P  <span> 'N'</span> R U N .</h1>
     <canvas id="canvas" tabindex="0" style="border: 10px solid black;"></canvas>
   </center>
 </body>
