--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body style="background-color:powderblue;" >
   <center>
     <h1> ≋T≋A≋P≋ ≋'≋N≋'≋ ≋R≋U≋N≋ </h1>
-    <canvas id="canvas" tabindex="0" style="border: 10px solid black;"></canvas>
+    <canvas id="canvas" tabindex="0" style="background:
+    url('./assets/Background1.png')"></canvas>
   </center>
 </body>
 </html>
