Recreated unmerged commits

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <style>
      h1 {
      color: #9932CC;
-     font-size: 80px;
+     font-size: 65px;
      }
      #title span{
-     font-size: 128px;
+     font-size: 80px;
      }
 
    </style>
@@ -25,7 +25,8 @@
 <body >
   <center>
 
-    <h1> T A P  'N' R U N  </h1>
+    <h1 id="title", style="font-family:Courier;"> . T A P  <span>'N'</span>
+      R U N . </h1>
     <canvas id="canvas" tabindex="0" style="background:
     url('./assets/Background1.png')"></canvas>
 
