--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="src/button.js"></script>
   <style>
      h1 {
-     color: #9932CC;
+     color: #060505;
      font-size: 65px;
      }
      #title span{
@@ -25,8 +25,8 @@
 <body >
   <center>
 
-    <h1 id="title", style="font-family:Courier;"> . T A P  <span>'N'</span>
-      R U N . </h1>
+    <h1 id="title", style="font-family:Courier;">  T A P  <span>'N'</span>
+      R U N  </h1>
     <canvas id="canvas" tabindex="0" style="background:
     url('./assets/Background1.png')"></canvas>
 
