--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,16 +17,17 @@
   <script src="src/Player.js"></script>
   <script src="src/Game.js"></script>
   <script src="src/display.js"></script>
-  <script src="src/movement.js"></script>
+  <script src="src/button.js"></script>
   <script src="src/controller.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/featureSpec.js"></script>
+  <script src="spec/controllerSpec.js"></script>
   <script src="spec/timerSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
   <script src="spec/GameSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
-  <script src="spec/movementSpec.js"></script>
+  <script src="spec/buttonSpec.js"></script>
   <script src="spec/webHelpers.js"></script>
 
 </head>
