--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en" dir="ltr">
 <head>
+
   <meta charset="utf-8">
   <title> T A P 'N' R U N</title>
   <script src="src/Player.js"></script>
@@ -31,7 +32,15 @@
     <canvas id="canvas" tabindex="0" style="background:
     url('./assets/Background1.png')"></canvas>
 
+    <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
+    <h3 id="player1", style="font-family:Courier;"> Lane 1</h3>
+    <h3 id="lane2", style="font-family:Courier;"> Lane 2</h3>
+    <h3 id="lane3", style="font-family:Courier;"> Lane 3</h3>
+    <h3 id="lane4", style="font-family:Courier;"> Lane 4</h3>
+
+
   </center>
+
 </body>
 </html>
 
