--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 
     <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
     <h3 id="player1", style="font-family:Courier;"> Lane 1</h3>
-    <h3 id="lane2", style="font-family:Courier;"> Lane 2</h3>
-    <h3 id="lane3", style="font-family:Courier;"> Lane 3</h3>
-    <h3 id="lane4", style="font-family:Courier;"> Lane 4</h3>
+    <h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>
+    <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
+    <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
+
+
 
 
   </center>
