--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
      font-size: 65px;
      }
      #title span{
-       color: #EE1D1D;
      font-size: 80px;
      }
 
@@ -33,7 +32,7 @@
     url('./assets/Background1.png')"></canvas>
 
     <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
-    <h3 id="player1", style="font-family:Courier;"> Lane 1</h3>
+    <h3 id="player1", style="font-family:Courier;"></h3>
     <h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>
     <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
     <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
