--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,9 +15,9 @@
   <!-- include source files here... -->
   <script src="src/timer.js"></script>
   <script src="src/Player.js"></script>
+  <script src="src/Player2.js"></script>
   <script src="src/Game.js"></script>
   <script src="src/display.js"></script>
-  <script src="src/button.js"></script>
   <script src="src/controller.js"></script>
 
   <!-- include spec files here... -->
@@ -25,9 +25,9 @@
   <script src="spec/controllerSpec.js"></script>
   <script src="spec/timerSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
+  <script src="spec/player2Spec.js"></script>
   <script src="spec/GameSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
-  <script src="spec/buttonSpec.js"></script>
   <script src="spec/webHelpers.js"></script>
 
 </head>
