Added runner assets for lane 3 & 4

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <script src="src/controller.js"></script>
   <script src="interface.js"></script>
   <script src="src/button.js"></script>
+  <script src="src/Lane3Runner.js"></script>
+  <script src="src/Lane4Runner.js"></script>
+
   <style>
      h1 {
      color: #060505;
