Play Again Button Pops Up but does nothing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="src/Player.js"></script>
   <script src="src/display.js"></script>
   <script src="src/timer.js"></script>
-  <script src="src/movement.js"></script>
   <script src="src/controller.js"></script>
   <script src="interface.js"></script>
   <script src="src/button.js"></script>
@@ -32,11 +31,11 @@
     <canvas id="canvas" tabindex="0" style="background:
     url('./assets/Background1.png')"></canvas>
 
-    <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
+    <!--<h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>-->
     <h3 id="player1", style="font-family:Courier;"></h3>
-    <h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>
-    <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
-    <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
+    <!--<h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>-->
+    <!--<h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>-->
+    <!--<h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>-->
 
 
 
