--- a/index.html
+++ b/index.html
@@ -4,54 +4,45 @@
 <head>
 
   <meta charset="utf-8">
+  <link rel="stylesheet" href="./stylesheets/style.css">
   <title> T A P 'N' R U N</title>
   <script src="src/Player.js"></script>
   <script src="src/display.js"></script>
   <script src="src/timer.js"></script>
-  <script src="src/movement.js"></script>
   <script src="src/controller.js"></script>
   <script src="interface.js"></script>
   <script src="src/button.js"></script>
-  <style>
-     h1 {
-     color: #060505;
-     font-size: 65px;
-     }
-     #title span{
-     font-size: 80px;
-     }
-
-   </style>
 </head>
 <body >
   <center>
-
     <h1 id="title", style="font-family:Courier;">  T A P  <span>'N'</span>
       R U N  </h1>
-    <canvas id="canvas" tabindex="0" style="background:
-    url('./assets/Background1.png')"></canvas>
 
-    <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
-    <h3 id="player1", style="font-family:Courier;"></h3>
-    <h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>
-    <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
-    <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
+      <canvas id="canvas" tabindex="0"></canvas>
 
-
-
-
-  </center>
-
-</body>
-</html>
+      <div id = 'standings'>
+        <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
+        <h3 id="player1", style="font-family:Courier;"></h3>
+        <h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>
+        <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
+        <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
+      </div>
 
 
 
-<!-- circle that moves on click on x axis to other side of screen -->
-<!--  Set interval function, need an animation loop that starts with an
-empty canvas, then draws it
-neet to control canvas with keyboard.-->
+
+    </center>
+
+  </body>
+  </html>
 
 
 
-<!-- can test starting position coordinates, and then test how far it is after a certain amount of clicks  -->
+  <!-- circle that moves on click on x axis to other side of screen -->
+  <!--  Set interval function, need an animation loop that starts with an
+  empty canvas, then draws it
+  neet to control canvas with keyboard.-->
+
+
+
+  <!-- can test starting position coordinates, and then test how far it is after a certain amount of clicks  -->
