minor feature: Player 2 is prompted for their name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>
     <h3 id="player1", style="font-family:Courier;"></h3>
-    <h3 id="lane2", style="font-family:Courier;"> Lane 2: Simon</h3>
+    <h3 id="player2", style="font-family:Courier;"></h3>
     <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
     <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
 
