Tests: Uselss files removed. Scripts added to Specrunner

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,8 @@
   <script src="src/timer.js"></script>
   <script src="src/Player.js"></script>
   <script src="src/Player2.js"></script>
+  <script src="src/Lane3Runner.js"></script>
+  <script src="src/Lane4Runner.js"></script>
   <script src="src/display.js"></script>
   <script src="src/controller.js"></script>
 
@@ -25,7 +27,8 @@
   <script src="spec/timerSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
   <script src="spec/player2Spec.js"></script>
+  <script src="spec/Lane3RunnerSpec.js"></script>
+  <script src="spec/Lane4RunnerSpec.js"></script>
   <script src="spec/displaySpec.js"></script>
-  <script src="spec/webHelpers.js"></script>
 
 </head>
