Created Countdown Class out of Display Class

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="src/timer.js"></script>
   <script src="src/controller.js"></script>
   <script src="interface.js"></script>
+  <script src="src/countdown.js"></script>
 
   <style>
      h1 {
