--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body >
   <center>
 
-    <h1 id="title", style="font-family:Courier;">  T A P  <span>'N'</span>
+    <h1 id="title", style="font-family:Courier;">  T A P  <span id="span">'N'</span>
       R U N  </h1>
 
       <canvas id="canvas" tabindex="0"></canvas>
