--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -25,7 +25,7 @@
   <!-- include spec files here... -->
   <!-- <script src="spec/featureSpec.js"></script> -->
   <!-- <script src="spec/controllerSpec.js"></script> -->
-  <!-- <script src="spec/timerSpec.js"></script> -->
+  <script src="spec/timerSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
   <!-- <script src="spec/player2Spec.js"></script> -->
   <!-- <script src="spec/Lane3RunnerSpec.js"></script> -->
