--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body >
   <center>
 
-    <h1 id="title", style="font-family:Courier;">  T A P  <span id="span">'N'</span>
-      R U N  </h1>
+    <div><h1 id="title", style="font-family:Courier;">  T A P  <span id="capitalN">'N'</span>
+      R U N  </h1></div>
 
       <canvas id="canvas" tabindex="0"></canvas>
 
