--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--<h2 id="leaderboard", style="font-family:Courier;"> Standings </h2>-->
         <h3 id="player1", style="font-family:Courier;"></h3>
         <h3 id="player2", style="font-family:Courier;"></h3>
-        <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacq</h3>
+        <h3 id="lane3", style="font-family:Courier;"> Lane 3: Jacques</h3>
         <h3 id="lane4", style="font-family:Courier;"> Lane 4: Subomi</h3>
       </div>
     </center>
