--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -23,14 +23,10 @@
   <script src="src/countdown.js"></script>
 
   <!-- include spec files here... -->
-  <!-- <script src="spec/featureSpec.js"></script> -->
   <script src="spec/controllerSpec.js"></script>
   <script src="spec/timerSpec.js"></script>
   <script src="spec/playerSpec.js"></script>
-  <!-- <script src="spec/player2Spec.js"></script> -->
-  <!-- <script src="spec/Lane3RunnerSpec.js"></script> -->
-  <!-- <script src="spec/Lane4RunnerSpec.js"></script> -->
-  <!-- <script src="spec/displaySpec.js"></script> -->
+  <script src="spec/displaySpec.js"></script> -->
   <script src="spec/countdownSpec.js"></script>
 
 
