button ref added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 
     <div><h1 id="title", style="font-family:Courier;">  T A P  <span id="capitalN">'N'</span>
       R U N  </h1></div>
-
+      <div id='table'>
+        <li id="a-key">
+          <img src="./assets/A-key.png" alt="Press A to move Player1" height="50px" width="50px">
+        </li>
+        <br>
+        <br>
+        <br>
+        <li id='l-key'>
+          <img src="./assets/L-key.png" alt="Press L to move Player2" height="50px" width="50px">
+        </li>
+      </div>
       <canvas id="canvas" tabindex="0"></canvas>
 
       <div id='standings'>
